# sem_image_parser_sdl2

./: CMakeLists.txt  main.c
